確認CSS檔案是否吃到

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="zh-tw">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/all.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="all.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kata-大挑戰</title>
 </head>
